--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://newsjelly.github.io" # the base hostname & protocol for your site
+url: "http://newsjelly.github.io/blog-contents/" # the base hostname & protocol for your site
 baseurl: ""
 #used to display twitter cards
 twitter_handle: '@newsjelly'
